--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-polyfill": "6.26.0",
-    "lodash": "4.17.4"
+    "lodash": "4.17.4",
+    "mersenne-twister": "1.1.0"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
