--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-core": "6.26.0",
     "babel-preset-env": "1.6.1",
     "chai": "4.1.2",
+    "coveralls": "3.0.0",
     "isparta": "4.0.0",
     "istanbul": "0.4.5",
     "mocha": "4.0.1",
