--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "compile": "rimraf lib/ && babel ./src --out-dir lib/ --copy-files",
     "push:git": "git push && git push --tags",
-    "push:npm": "npm run test && npm run compile && npm publish",
+    "push:npm": "npm run test && npm run compile && npm publish && npm run push:git",
     "test": "babel-node ./node_modules/.bin/isparta cover _mocha -- --recursive --reporter spec",
     "version:patch": "npm version patch",
     "version:minor": "npm version minor",
